--- a/app/create-contract/create-contract.html
+++ b/app/create-contract/create-contract.html
@@ -103,6 +103,15 @@
                 </label>
             </div>
 
+            <div class="mt15">
+                <label class="md-switch">
+                <input class="has-value" type="checkbox">
+                <i class="blue"></i>
+                <font class="text-toggle">Expiry Date (Dec 20, 2016) [cal-icon]</font>
+                <br><label class="toggle-ftr">Change the order by dragging names around</label>
+                </label>
+            </div>
+
 
          
         </div>
