--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="assets/css/font-awesome/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/material-design-icons/material-design-icons.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="bower_components/datetimepicker/jquery.datetimepicker.css" type="text/css" />
     <!-- build:css assets/styles/app.min.css -->
     <link rel="stylesheet" href="assets/css/app.min.css" type="text/css" />
     <!-- endbuild -->
@@ -59,7 +60,12 @@
         <script src="components/version/angular-router.js"></script>
         
         <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js" crossorigin="anonymous"></script>
+        <script src="assets/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/signature_pad/1.5.3/signature_pad.min.js"></script>
+        <script src='bower_components/moment/moment.js' type="text/javascript"></script>
+        <script src="bower_components/lodash/lodash.js" type="text/javascript"></script>
+        <script src="bower_components/datetimepicker/build/jquery.datetimepicker.full.js" type="text/javascript"></script>
+
         <script src="app.js"></script>
         <script src="activity/activity.js"></script>
         <script src="sign-contract/sign-contract.js"></script>
@@ -68,13 +74,13 @@
         <script src="contract-listing/contract-listing.js"></script>
         <script src="contract-details/contract-details.js"></script>
         <script src="create-contract/create-contract.js"></script>
+        <script src="common-component/date-time-picker/date-time-picker.js"></script>
         <script src="user/user.js"></script>
         <script src="components/version/version.js"></script>
         <script src="components/version/version-directive.js"></script>
         <script src="components/version/interpolate-filter.js"></script>
         <!-- <script src="js/jquery.js"></script> -->
         <!-- Bootstrap Core JavaScript -->
-        <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
