--- a/app/create-contract/create-contract.html
+++ b/app/create-contract/create-contract.html
@@ -107,7 +107,7 @@
                 <label class="md-switch">
                 <input class="has-value" type="checkbox" name ='chooseExpiry' ng-model='chooseExpiry'>
                 <i class="blue"></i>
-                <font ng-if='chooseExpiry' class="text-toggle">Expiry Date ({{expiryDate}}) <span  class="fa fa-calendar" ms-date-time-picker ng-model="expiryDate" aria-hidden="true"></span></font>
+                <font ng-if='chooseExpiry' class="text-toggle">Will expire on:<br> ({{expiryDate}}) <span  class="fa fa-calendar" ms-date-time-picker ng-model="expiryDate" aria-hidden="true"></span></font>
                 <font ng-if='!chooseExpiry' class="text-toggle">No Expiry</font>
                 <br><label class="toggle-ftr">Change the expiry date from calendar</label>
                 </label>
