--- a/app/index.html
+++ b/app/index.html
@@ -55,11 +55,11 @@
         <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
-  <script src="https://code.jquery.com/jquery-3.1.1.js" crossorigin="anonymous"></script>
+        <script src="bower_components/jquery/dist/jquery.min.js"></script>
         <script src="components/version/angular.js"></script>
         <script src="components/version/angular-router.js"></script>
         
-        <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js" crossorigin="anonymous"></script>
+        <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/signature_pad/1.5.3/signature_pad.min.js"></script>
         <script src='bower_components/moment/moment.js' type="text/javascript"></script>
