--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,7 @@
         <script src="contract-details/contract-details.js"></script>
         <script src="create-contract/create-contract.js"></script>
         <script src="common-component/date-time-picker/date-time-picker.js"></script>
+        <script src="common-component/repeat-done-directive.js"></script>
         <script src="user/user.js"></script>
         <script src="components/version/version.js"></script>
         <script src="components/version/version-directive.js"></script>
