--- a/app/create-contract/create-contract.html
+++ b/app/create-contract/create-contract.html
@@ -100,17 +100,14 @@
 
             <div class="mt15">
                 <label class="md-switch">
-                <input class="has-value" type="checkbox" name ='chooseExpiry' ng-model='chooseExpiry'>
+                <input class="has-value" type="checkbox" name ='chooseExpiry' ng-model='document.chooseExpiry'>
                 <i class="blue"></i>
-                <font ng-if='chooseExpiry&&!expiryDate' class="text-toggle">Pick Expiry Date<span  class="fa fa-calendar" ms-date-time-picker ng-model="expiryDate" aria-hidden="true"></span></font>
-                <font ng-if='chooseExpiry&&expiryDate' class="text-toggle">Will expire on:<br> ({{expiryDate}}) <span  class="fa fa-calendar" ms-date-time-picker ng-model="expiryDate" aria-hidden="true"></span></font>
-                <font ng-if='!chooseExpiry' class="text-toggle">No Expiry</font>
+                <font ng-if='document.chooseExpiry&&!document.expiryDate' class="text-toggle">Pick Expiry Date<span  class="fa fa-calendar" ms-date-time-picker ng-model="document.expiryDate" aria-hidden="true"></span></font>
+                <font ng-if='document.chooseExpiry&&document.expiryDate' class="text-toggle">Will expire on:<br> ({{document.expiryDate}}) <span  class="fa fa-calendar" ms-date-time-picker ng-model="document.expiryDate" aria-hidden="true"></span></font>
+                <font ng-if='!document.chooseExpiry' class="text-toggle">No Expiry</font>
                 <br><label class="toggle-ftr">Change the expiry date from calendar</label>
                 </label>
-            </div>
-
-
-         
+            </div>       
         </div>
     </div>
     <!-- Cover Email -->
