--- a/app/create-contract/create-contract.html
+++ b/app/create-contract/create-contract.html
@@ -78,7 +78,9 @@
                             </div>
                         </div>
                         <div class="input-group">   
-                            <button type="button" class="btn btn-default style-button"><i class="fa fa-trash-o" aria-hidden="true"></i>Remove Signer</button>
+                            <button type="button" 
+                            ng-click="removeSigneeForm(signee.id)"
+                            class="btn btn-default style-button"><i class="fa fa-trash-o" aria-hidden="true"></i>Remove Signer</button>
                         </div>   
                     </form>                 
                 </div>
