--- a/app/sign-contract/sign-contract.html
+++ b/app/sign-contract/sign-contract.html
@@ -7,14 +7,46 @@
                 </p>
                 <!-- <span>Draw your signature below </span> -->
             </div>
-            <div class="m-signature-pad--body">
-                <canvas width="100px" height="100px"></canvas>
+            <div>
+             <!-- Nav tabs -->
+              <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation" class="active nav-item">
+                    <a class="nav-link" data-target="#type" aria-controls="type" role="tab" data-toggle="tab">
+                        Type Signature
+                    </a>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <a class="nav-link" data-target="#draw" aria-controls="draw" role="tab" data-toggle="tab">Draw Signature</a>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <a class="nav-link" data-target="#upload" aria-controls="upload" role="tab" data-toggle="tab">Upload File</a>
+                </li>
+              </ul>
+                <div class="tab-content">
+                    <div role="tabpanel" class="tab-pane active" id="type"></div>
+                    <div role="tabpanel" class="tab-pane" id="draw">
+                        <div class="m-signature-pad--body">
+                            <canvas width="100px" height="100px"></canvas>
+                        </div>
+                        <div class="m-t-sm" style="font-size: 14px;">
+                            <span class="text-muted">Draw your signature above the line</span>
+                            <a class="text-danger pull-right" data-action="clear">
+                                <i class="material-icons">&#xE5CD;</i> Clear Signature
+                            </a>
+                        </div>
+                    </div>
+                    <div role="tabpanel" class="tab-pane" id="upload">
+                        <div ngf-drop ng-model="sign.files" ngf-select
+                            accept="image/*"
+                            ngf-drag-over-class="'dragover'" 
+                            style="width: 100%;height: 130px;border: 1px solid #f4f4f4;" 
+                            class="drop-box">Drop</div>
+                        <img ngf-src="sign.files || '/thumb.jpg'" 
+                          style="margin-top: 30px;width: 198px;height: auto;">
+                    </div>
+                </div>
             </div>
             <div class="m-signature-pad--footer">
-                <div class="m-t-sm" style="font-size: 14px;">
-                    <span class="text-muted">Draw your signature above the line</span>
-                    <a class="text-danger pull-right" data-action="clear"><i class="material-icons">&#xE5CD;</i> Clear Signature</a>
-                </div>
                 <div class="m-t-sm" style="font-size: 14px;">
                     <input type="checkbox" id="agree"> I agree to have this signature legally represent me.
                 </div>
