--- a/app/sign-contract/sign-contract.html
+++ b/app/sign-contract/sign-contract.html
@@ -41,8 +41,8 @@
                             ngf-drag-over-class="'dragover'" 
                             style="width: 100%;height: 130px;border: 1px solid #f4f4f4;" 
                             class="drop-box">Drop</div>
-                        <img ngf-src="sign.files || '/thumb.jpg'" 
-                          style="margin-top: 30px;width: 198px;height: auto;">
+                        <img ng-if='sign.files' ngf-src="sign.files || '/thumb.jpg'" 
+                          style="margin-top: 30px;width: 158px;height: auto;">
                     </div>
                 </div>
             </div>
