--- a/app/sign-contract/sign-contract.html
+++ b/app/sign-contract/sign-contract.html
@@ -1,61 +1,74 @@
 <div class="container" id="sign-item">
-    <div style="z-index: 9999; width: 600px;clear: both;  visibility: hidden; height: 0; position: fixed; left:30%;" id="signature-container">
-        <div id="signature-pad" class="m-signature-pad" style="padding: 20px; position:absolute; top:0;">
-            <div>
-                <h5 style="font-size: 16px; font-weight: bold">Create your electronic signature</h5>
-                <p style="font-size: 13px;"> Just like a traditional signature, this mark is used by CrossDottr to represent your intent to sign documents.You appear to be located in <strong>Denmark</strong> where electronic signatures are legally binding. <a class="text-primary _500" href="">Read more</a>
+    <div class="modal fade" role="dialog"
+        id="signature-container">
+          <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Create your electronic signature</h4>
+              </div>
+              <div class="modal-body">
+                <p style="font-size: 13px;"> 
+                    Just like a traditional signature, this mark is used by CrossDottr to represent your intent to sign documents.You appear to be located in <strong>Denmark</strong> where electronic signatures are legally binding. <a class="text-primary _500" href="">Read more</a>
                 </p>
-                <!-- <span>Draw your signature below </span> -->
-            </div>
-            <div>
-             <!-- Nav tabs -->
-              <ul class="nav nav-tabs" role="tablist">
-                <li role="presentation" class="active nav-item">
-                    <a class="nav-link" data-target="#type" aria-controls="type" role="tab" data-toggle="tab">
-                        Type Signature
-                    </a>
-                </li>
-                <li class="nav-item" role="presentation">
-                    <a class="nav-link" data-target="#draw" aria-controls="draw" role="tab" data-toggle="tab">Draw Signature</a>
-                </li>
-                <li class="nav-item" role="presentation">
-                    <a class="nav-link" data-target="#upload" aria-controls="upload" role="tab" data-toggle="tab">Upload File</a>
-                </li>
-              </ul>
-                <div class="tab-content">
-                    <div role="tabpanel" class="tab-pane active" id="type"></div>
-                    <div role="tabpanel" class="tab-pane" id="draw">
-                        <div class="m-signature-pad--body">
-                            <canvas width="100px" height="100px"></canvas>
-                        </div>
-                        <div class="m-t-sm" style="font-size: 14px;">
-                            <span class="text-muted">Draw your signature above the line</span>
-                            <a class="text-danger pull-right" data-action="clear">
-                                <i class="material-icons">&#xE5CD;</i> Clear Signature
+                <div id="signature-pad" class="m-signature-pad modal-dialog">
+                    <div>
+                     <!-- Nav tabs -->
+                      <ul class="nav nav-tabs" role="tablist">
+                        <li role="presentation" class="active nav-item">
+                            <a class="nav-link" data-target="#type" aria-controls="type" role="tab" data-toggle="tab">
+                                Type Signature
                             </a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link" data-target="#draw" aria-controls="draw" role="tab" data-toggle="tab">Draw Signature</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link" data-target="#upload" aria-controls="upload" role="tab" data-toggle="tab">Upload File</a>
+                        </li>
+                      </ul>
+                        <div class="tab-content">
+                            <div role="tabpanel" class="tab-pane active" id="type"></div>
+                            <div role="tabpanel" class="tab-pane" id="draw">
+                                <div class="m-signature-pad--body">
+                                    <canvas width="100px" height="100px"></canvas>
+                                </div>
+                                <div class="m-t-sm" style="font-size: 14px;">
+                                    <span class="text-muted">Draw your signature above the line</span>
+                                    <a class="text-danger pull-right" data-action="clear">
+                                        <i class="material-icons">&#xE5CD;</i> Clear Signature
+                                    </a>
+                                </div>
+                            </div>
+                            <div role="tabpanel" class="tab-pane" id="upload">
+                                <div ngf-drop ng-model="sign.files" ngf-select
+                                    accept="image/*"
+                                    ngf-drag-over-class="'dragover'" 
+                                    style="width: 100%;height: 130px;border: 1px solid #f4f4f4;" 
+                                    class="drop-box">Drop</div>
+                                <img ng-if='sign.files' ngf-src="sign.files || '/thumb.jpg'" 
+                                  style="margin-top: 30px;width: 158px;height: auto;">
+                            </div>
                         </div>
                     </div>
-                    <div role="tabpanel" class="tab-pane" id="upload">
-                        <div ngf-drop ng-model="sign.files" ngf-select
-                            accept="image/*"
-                            ngf-drag-over-class="'dragover'" 
-                            style="width: 100%;height: 130px;border: 1px solid #f4f4f4;" 
-                            class="drop-box">Drop</div>
-                        <img ng-if='sign.files' ngf-src="sign.files || '/thumb.jpg'" 
-                          style="margin-top: 30px;width: 158px;height: auto;">
+                </div>
+              </div>
+              <div class="modal-footer">
+                   <div class="m-signature-pad--footer">
+                        <div class="m-t-sm" style="font-size: 14px;text-align: left;">
+                            <input type="checkbox" id="agree"> I agree to have this signature legally represent me.
+                        </div>
+                        <div class="m-t-sm pull-right" style="font-size: 14px;">
+                            <button type="button" data-dismiss="modal" 
+                            class="button btn btn-default" data-action="close">Cancel</button>
+                            <button type="button" class="button save btn btn-primary" data-action="save">Agree & Choose</button>
+                        </div>
                     </div>
-                </div>
+              </div>
             </div>
-            <div class="m-signature-pad--footer">
-                <div class="m-t-sm" style="font-size: 14px;">
-                    <input type="checkbox" id="agree"> I agree to have this signature legally represent me.
-                </div>
-                <div class="m-t-sm pull-right" style="font-size: 14px;">
-                    <button type="button" class="button btn btn-default" data-action="close">Cancel</button>
-                    <button type="button" class="button save btn btn-primary" data-action="save">Agree & Choose</button>
-                </div>
-            </div>
-        </div>
+
+          </div>
     </div>
     <div class="row">
         <div class="col-md-10 col-md-offset-1 document-header text-center" id="col-final">
@@ -70,7 +83,10 @@
                 <div class="document-content">
                     <img ng-repeat="thumbnail in thumbnails track by $index" src="http://staging-1.crossdottr.com/files/{{thumbnail.name}}" class="img-responsive">
                     <span ng-repeat="filed in fileds track by $index" style="position: absolute; top:{{filed.yOrigin}}px; left: {{filed.xOrigin}}px;border: 2px solid green;">
-                    <span ng-if="filed.fieldType == 'SIGNATURE'" ng-click="showSignaturePad(filed.id)" id="{{filed.id}}" class="{{filed.fieldType}} sign-holder btn" style="width:{{filed.minWidth}}px;height:{{filed.minHeight}}px; padding:0;">
+                    <span ng-if="filed.fieldType == 'SIGNATURE'" 
+                        ng-click="showSignaturePad(filed.id)"
+                        data-toggle="modal" data-target="#signature-container"
+                        id="{{filed.id}}" class="{{filed.fieldType}} sign-holder btn" style="width:{{filed.minWidth}}px;height:{{filed.minHeight}}px; padding:0;">
                         <span style="width:{{filed.minWidth}}px;height:{{filed.minHeight}}px;" ng-if="!utl" id="sign-text">{{filed.fieldType}}</span>
                     <img id="img-tag" src="{{utl}}" ng-if="utl" style="width:{{filed.minWidth}}px;height:{{filed.minHeight}}px;">
                     </span>
