--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <title>Cross Dottr</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Allura|Kaushan+Script|Dancing+Script|Marck+Script" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/glyphicons/glyphicons.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/font-awesome/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/material-design-icons/material-design-icons.css" type="text/css" />
